@@ -1,6 +1,6 @@
 class Admin::SettingsController < Admin::BaseController
   before_filter :find_and_sort_templates
-  clear_empty_templates_for :site, :search_layout, :tag_layout, :only => :update
+  clear_empty_templates_for :site, :tag_layout, :only => :update
 
   def update
     if site.update_attributes params[:site]
