@@ -195,15 +195,6 @@ class MephistoControllerTest < Test::Unit::TestCase
     assert_tag :tag => 'h1', :content => "#{contents(:welcome).title} in #{sections(:about).name}"
   end
 
-  def test_should_render_with_alternate_search_layout
-    sites(:first).update_attribute :search_layout, 'alt_layout.liquid'
-    dispatch 'search'
-    assert_dispatch_action :search
-    assert_preferred_template :search
-    assert_layout_template    :alt_layout
-    assert_template_type      :search
-  end
-
   def test_should_search_entries
     dispatch 'search', :q => 'another'
     assert_dispatch_action :search
